Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48325

[REG: 5.4.2->5.5.0] Sending key event through sendEvent ignores shortcuts

XMLWordPrintable

    • 7c532891e0be2cf78c89738e175b3d312d305e4e

      To reproduce:
      1. Run attached application
      2. Try pressing the button

      Expected:
      messagebox shown

      Actual:
      nothing happens

      It does work with Qt 5.4.2.

      Maybe this is to blame: https://codereview.qt-project.org/#/c/86666/
      This does not fix this issue: https://codereview.qt-project.org/#/c/121466/1

        1. qtbug48325.tar.gz
          0.6 kB
          Joni Poikelin
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            andysh Andy Shaw
            poikelin Joni Poikelin
            Votes:
            2 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes